--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,7 +178,7 @@ nav a {
   right: 0px;
   top: 0px;
   bottom: 0px;
-  background-color: white;
+  background-color: #0d0414;
 }
 
 /* rect {
@@ -186,7 +186,7 @@ nav a {
   } */
 
 .nodeClass {
-  opacity: 0.3;
+  opacity: 0.5;
   width: 10em;
   height: 10em;
 }
@@ -205,21 +205,24 @@ nav a {
   height: 5em; */
 }
 
-.nodeStrong {
+.nodeFull {
+  opacity: 0.5;
+}
+
+.nodeHigh {
   opacity: 0.5;
 }
 
 .nodeMedium {
   opacity: 0.1;
-
 }
 
-.nodeSmall {
+.nodeLow {
   opacity: 0.1;
 
 }
 
-.nodeTiny {
+.nodeDead {
   opacity: 0.1;
 
 }
