--- a/public/css/minigamewin.css
+++ b/public/css/minigamewin.css
@@ -2,12 +2,13 @@
     box-sizing: border-box;
 }
 
-input[type=text], select, textarea {
+input {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+    font-size: inherit;
 }
 
 label {
@@ -15,18 +16,13 @@ label {
     display: inline-block;
 }
 
-input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
+input[type=button] {
+    background-color: #eee;
 }
 
-input[type=submit]:hover {
+input[type=button]:hover {
     background-color: #45a049;
+    cursor: pointer;
 }
 
 .container {
@@ -63,9 +59,13 @@ input[type=submit]:hover {
 }
 
 #newPlayerSignup {
+  color: black;
   background-color: #fefefe;
-  margin: 5% auto;
-  padding: 15px;
-  border: 1px solid #888;
-  width: 66%;
+  margin: 2em auto;
+  padding: 2em;
+  width: 60%;
+}
+
+h2 {
+  margin-top: 0;
 }
