revert node size to correlate with health instead of stroke

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -212,12 +212,12 @@ nav a {
 }
 
 .nodeHigh {
-  stroke: green;
+  /* stroke: green; */
   opacity: 0.5;
 }
 
 .nodeMedium {
-  stroke: blue;
+  /* stroke: blue; */
   opacity: 0.3;
 }
 
