try to reintegrate the transparent node stroke implemented by Tiffany and lost in the shuffle

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -185,8 +185,8 @@ nav a {
 .nodeClass {
   opacity: 0.8;
   stroke: transparent;
+  stroke-width: 5px;
   cursor: pointer;
-  stroke: 4;
 }
 
 .nodeClass:hover {
