don't allow selecting of the annotation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -264,7 +264,9 @@ nav a {
   font-size: 2.6em;
 }
 
-.annotationBox {}
+.annotationBox {
+  user-select: none;
+}
 
 .annotation path {
   /* stroke: blue; */
