--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,6 +62,8 @@ body {
 
 .title {
   color: white;
+  font-family: monospace;
+  font-weight: normal;
   z-index: 1;
   display: inline-block;
   position: fixed;
@@ -169,6 +171,7 @@ nav a {
 
 /* Make the chart container - SVG - fill the page using CSS. */
 
+
 #chart {
   position: fixed;
   left: 0px;
@@ -176,6 +179,10 @@ nav a {
   top: 0px;
   bottom: 0px;
   background-color: #0d0414;
+}
+
+#username {
+  color: #ff3399;
 }
 
 /* rect {
@@ -353,7 +360,8 @@ nav a {
 }
 
 .login-elements a, .login-elements a:visited {
-  color:  #ff3399;
+  color:  white;
+  opacity: 0.5;
   text-decoration: none;
 }
 
@@ -471,7 +479,7 @@ button:hover {
 }
 .onoffswitch-inner:before, .onoffswitch-inner:after {
     display: block; float: left; width: 50%; height: 25px; padding: 0; line-height: 25px;
-    font-size: 14px; color: white; font-family: monospace, Trebuchet, Arial, sans-serif; font-weight: bold;
+    font-size: 14px; color: white; font-family: monospace;
     box-sizing: border-box;
 }
 .onoffswitch-inner:before {
