--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@ html {
   font-family: monospace;
   color: white;
   background-color: black;
-  font-size: 1em;
+  /* font-size: 1em; */
   line-height: 1.7;
 }
 
