--- a/public/css/main.css
+++ b/public/css/main.css
@@ -241,6 +241,19 @@ nav a {
   /* opacity: 0.3; */
 }
 
+.nodeClickedTransition {
+  fill: #00FF00;
+  /*transition: <property> <duration> <timing-function> <delay>;*/
+  transition: fill 1s 0.5s ease;
+  /*transition-timing-function: ease-in-out;*/
+}
+
+.nodeClickedErrorTransition {
+  fill: gray;
+  transition: fill 0.5s ease;
+}
+/* gray */
+
 .nodes circle {
   /* width: 100px; */
 }
