--- a/public/css/main.css
+++ b/public/css/main.css
@@ -585,11 +585,11 @@ button:hover {
   *zoom: 1;
 }
 
-@media (max-width: 900px) {
+/* @media (max-width: 1200px) {
   body {
     font-size: 18px;
   }
   .modal-content {
     width: 60%;
   }
-}
+} */
